# docx2txt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: docx2txt.hpp
src/: Data.cpp  Data.hpp  Document.cpp  Document.hpp  Reader.cpp  Reader.hpp  Type.hpp  docx2txt.cpp
tests/: main.cpp
tests/data/: empty.docx  empty.odt  empty_libre.docx  empty_online.docx  helloworld.docx  helloworld.odt  helloworld_libre.docx  helloworld_online.docx  helloworldformatted.docx  table.docx  table.odt  table_libre.docx  table_online.docx  textbox.docx  textbox.odt  textbox.txt  threelines.odt  threelines_libre.docx  threelines_online.docx
